Eliminated Java 9 warnings